[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=2]
[ext_resource path="res://Pixeboy-z8XGD.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Music/Theme2.wav" type="AudioStream" id=4]
[ext_resource path="res://Music/Win.wav" type="AudioStream" id=5]
[ext_resource path="res://Music/Dead.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1248, 1302 )
scale = Vector2( 137.25, 138.625 )
texture = ExtResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TorchLabel" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.945098, 0.576471, 1 )
text = "Torches : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SheepLabel" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 72.0
margin_right = 152.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.619608, 0.392157, 1 )
text = "Sheeps : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BufferLabel" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 101.0
margin_right = 152.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.439216, 0.996078, 0.392157, 1 )
text = "Buffer : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BufferLabel2" type="Label" parent="CanvasLayer"]
margin_left = 142.0
margin_top = 101.0
margin_right = 262.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.439216, 0.996078, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SheepLabel2" type="Label" parent="CanvasLayer"]
margin_left = 156.0
margin_top = 72.0
margin_right = 276.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.619608, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TorchLabel2" type="Label" parent="CanvasLayer"]
margin_left = 153.0
margin_top = 40.0
margin_right = 273.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.945098, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TorchLabel3" type="Label" parent="CanvasLayer"]
margin_left = 188.0
margin_top = 40.0
margin_right = 308.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.945098, 0.576471, 1 )
text = "/14"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 440.0
margin_top = 384.0
margin_right = 792.0
margin_bottom = 431.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER :("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 440.0
margin_top = 384.0
margin_right = 792.0
margin_bottom = 431.0
custom_fonts/font = SubResource( 2 )
text = "YOU WON !!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
